# bevy_mod_component_mirror

./: Cargo.toml  Makefile  Readme.md
.github/workflows/: ci.yml  rust.yml
licenses/: LICENSE-MIT
src/: lib.rs  mirror.rs  rapier_mirrors.rs
src/rapier_mirrors/: collider.rs  impulse_joint.rs
