[package]
name = "bevy_mod_component_mirror"
authors = ["Nicola Papale"]
description = "A bevy plugin to mirror components"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "rapier", "bevy-inspector-egui"]
categories = ["game-development"]
repository = "https://github.com/devildahu/bevy_mod_component_mirror"
exclude = ["assets", ".github"]
version = "0.5.0"
edition = "2021"

[features]
rapier = ["bevy_rapier3d"]
default = ["rapier"]

[dependencies]
bevy_rapier3d = { version = "0.20.0", optional = true }
bevy = { version = "0.9.0", default-features = false }